Removed obsolete classes Refactored frontend files Refactored Cart operations