@@ -6,12 +6,12 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public class BackofficeUser implements UserDetails {
 
-    private Employee employee;
+    private final Employee employee;
 
     public BackofficeUser(){
         employee = new Employee();
@@ -22,7 +22,7 @@ public class BackofficeUser implements UserDetails {
     }
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Arrays.asList(new SimpleGrantedAuthority(Constants.EMPLOYEE_ROLE));
+        return List.of(new SimpleGrantedAuthority(Constants.EMPLOYEE_ROLE));
     }
 
     @Override
