@@ -6,12 +6,12 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public class FrontofficeUser implements UserDetails {
 
-    private Customer customer;
+    private final Customer customer;
 
     public FrontofficeUser(){
         customer = new Customer();
@@ -23,7 +23,7 @@ public class FrontofficeUser implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Arrays.asList(new SimpleGrantedAuthority(Constants.CUSTOMER_ROLE));
+        return List.of(new SimpleGrantedAuthority(Constants.CUSTOMER_ROLE));
     }
 
     @Override
